# AndroidScreenCapture

./: .gitignore  .gitmodules  README.md  build.sh  howto
abs_sock_srv/: cross_android_23_arm64v8a
minicap_adaptor/: .README.swp  CMakeLists.txt  README  cross_android  main.cpp  minicap_adaptor.h  unsock.cpp
minicap_adaptor/misc/output_to_pic/: fromstdin.c  main.c
prebuilt-binaries/: cap1.sh  cap2.sh
screencap/: screencap.cpp
tmp/screencap/: CMakeLists.txt
tools/FileTrans/client/: sendfile.sh
tools/FileTrans/server/: CMakeLists.txt  README  main.c
tools/abs_sock_srv/: CMakeLists.txt  README  main.c
tools/ncat/: README
tools/ncat/nmap-7.50/: android-configure.sh
